# Acrobatica

./: .gitignore  BRIEFING.md  DESIGN_BRIEF.md  HANDOFF_editor_3d_ios.md  HANDOFF_editor_zone_ios.md  README.md  mast3r_orthophoto.ipynb  package.json  pnpm-lock.yaml  tsconfig.base.json
FacciataPro/App/: FacciataProApp.swift  MainTabView.swift  RootView.swift
FacciataPro/Components/: PlaceholderView.swift
FacciataPro/Models/: Azienda.swift  Cantiere.swift  CicloLavorazione.swift  Cliente.swift  ElementoEscluso.swift  ElementoExtra.swift  Enums.swift  Facciata.swift  Preventivo.swift  Prodotto.swift  SimulazioneTinta.swift  StepCiclo.swift  VoceAccessoria.swift  VocePreventivo.swift
FacciataPro/Persistence/: ModelSchema.swift  SeedData.swift
FacciataPro/Pricing/: PreventivoBuilder.swift  PricingEngine.swift
FacciataPro/Theme/: Theme.swift
FacciataProTests/: PricingEngineTests.swift
apps/mobile/: app.json  package.json  tsconfig.json
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  nixpacks.toml  railway.json  requirements.txt
backend/app/: config.py  main.py  models.py  supabase_client.py
backend/docs/: photogrammetry-api-pilot.md
backend/fused_planes/: __init__.py  analysis_frame.py  assign_slice_to_planes.py  (+7 more)
backend/fused_planes/native/multiscale_planes/: CMakeLists.txt  main.cpp
backend/fused_planes/native/regiongrow/: CMakeLists.txt  main.cpp
design_handoff_acrobatica_app/: README.md
docs/: BRIEF_Design_Figma_Acrobatica.md  MODUS_OPERANDI_Acquisizione_e_Modellazione.md
ios/: .gitignore  README.md  project.yml
(+221 files in other folders)
